--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -22,6 +22,14 @@
     flex-direction: column;
     gap: 2rem;
 }
+
+.new-games-title {
+    font-size: 3rem;
+    color: #d4d4c7;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 .article-title {
     font-size: 4rem;
     color: #d4d4c7;
