--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,14 +16,14 @@
 
     <header class="header">
 
-        <a class="logo" href="index.html">
+        <a class="logo" href="{% url 'index' %}">
             <img src="{% static 'assets/images/icon.svg' %}" class="logo-image">
             <span class="logo-text">Games World</span>
         </a>
 
         <nav class="nav">
-            <a class="nav-a" href="index.html">Home</a>
-            <a class="nav-a" href="games.html">Games</a>
+            <a class="nav-a" href="{% url 'index' %}">Home</a>
+            <a class="nav-a" href="{% url 'games' %}">Games</a>
             <a class="nav-a" href="#about">About</a>
             <a class="nav-a" href="#contact">Contact</a>
         </nav>
